# AndroidPdfiumCompat

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ober/opdf/: MainActivity.java  MainActivityBinding.java
app/src/main/java/com/ober/opdf/logic/: AssetUtil.java  PdfRendererLogic.java
app/src/main/java/com/ober/opdf/wrapper/: AndroidPdfRendererImpl.java  CompatPdfRendererImpl.java  PdfRendererDelegate.java  PdfRendererFactory.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
pdfium_compat/: build.gradle  consumer-rules.pro
pdfium_compat/src/main/: AndroidManifest.xml
pdfium_compat/src/main/cpp/: CMakeLists.txt  PdfRendererCompat.cpp  PdfRendererCompat.h  log_def.h  main.cpp
pdfium_compat/src/main/java/com/ober/opd/pdfium/: PdfRendererCompat.java
pdfium_compat/src/main/java/com/ober/opdf/pdfium/: PdfRendererCompat.java
